<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:background="@drawable/fondo_blanco_hoja"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <TextView
        android:id="@+id/tituloRegistro"
        android:layout_width="404dp"
        android:layout_height="46dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="30dp"
        android:text="@string/titleRegistro"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/nombreIR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/border_edittext"
        android:ems="10"
        android:minHeight="48dp"
        android:paddingLeft="10dp"
        android:textSize="16sp"
        android:hint="@string/nombreI"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,RtlHardcoded,RtlSymmetry,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/ciudadIR"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/border_edittext"
        android:ems="10"
        android:hint="@string/ciudad"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreIR"
        tools:ignore="Autofill,RtlHardcoded,RtlSymmetry,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="318dp"
        android:layout_height="53dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/registroB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.867" />

    <EditText
        android:id="@+id/telefonoIR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:background="@drawable/border_edittext"
        android:ems="10"
        android:hint="@string/telefonoI"
        android:inputType="phone"
        android:minHeight="48dp"
        android:paddingLeft="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ciudadIR"
        tools:ignore="RtlHardcoded,RtlSymmetry,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/emailIR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:background="@drawable/border_edittext"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingLeft="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telefonoIR"
        tools:ignore="RtlHardcoded,RtlSymmetry,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/passwordIR1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:background="@drawable/border_edittext"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingLeft="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailIR"
        tools:ignore="RtlHardcoded,RtlSymmetry,VisualLintTextFieldSize" />

    <CheckBox
        android:id="@+id/showPassword2"
        android:layout_width="239dp"
        android:layout_height="52dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:paddingLeft="10dp"
        android:text="@string/passwordCheckBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordIR1"
        tools:ignore="RtlHardcoded,RtlSymmetry,VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>