<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_blanco_hoja"
    tools:context=".ModificarDatos">

    <EditText
        android:id="@+id/cambiar_nombre_I"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:background="@drawable/border_edittext"
        android:ems="10"
        android:hint="@string/nombreI"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062"
        tools:ignore="RtlSymmetry,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/cambiar_ciudad_I"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:background="@drawable/border_edittext"
        android:ems="10"
        android:hint="@string/ciudad"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198"
        tools:ignore="RtlSymmetry,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/cambiar_telefono_I"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:background="@drawable/border_edittext"
        android:ems="10"
        android:hint="@string/telefonoI"
        android:inputType="phone"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.348"
        tools:ignore="RtlSymmetry,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/guardarCambiosB"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:text="@string/guardar_cambios"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/titulo_modificar_datos"
        app:layout_constraintVertical_bias="0.653" />

    <TextView
        android:id="@+id/titulo_modificar_datos"
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:gravity="center"
        android:text="@string/modificar_datos_del_perfil"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>