<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_blanco_hoja"
    tools:context=".CambiarPassword">

    <Button
        android:id="@+id/boton_cambiar_password2"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:text="@string/cambiar_contrase_a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.715"
        tools:ignore="TextSizeCheck,DuplicateSpeakableTextCheck,VisualLintButtonSize" />

    <EditText
        android:id="@+id/pC2"
        android:layout_width="364dp"
        android:layout_height="55dp"
        android:autofillHints=""
        android:background="@drawable/border_edittext"
        android:ems="10"
        android:hint="@string/password2"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.617"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.406"
        tools:ignore="RtlSymmetry" />

    <CheckBox
        android:id="@+id/mostrar_password_ckeckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordCheckBox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55" />

    <EditText
        android:id="@+id/pC1"
        android:layout_width="364dp"
        android:layout_height="55dp"
        android:autofillHints=""
        android:background="@drawable/border_edittext"
        android:ems="10"
        android:hint="@string/password1"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.617"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/titulo_cambiar_password"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:gravity="center"
        android:text="@string/cambiar_contrase_a"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.003" />

</androidx.constraintlayout.widget.ConstraintLayout>