<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:fitsSystemWindows="true"
        android:background="@drawable/fondo_blanco_hoja"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/title"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.088" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="280dp"
            android:layout_height="122dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/logo"
            tools:ignore="ContentDescription,HardcodedText" />

        <TextView
            android:id="@+id/loginL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:text="@string/loginL"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.105"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.256" />

        <EditText
            android:id="@+id/emailI"
            android:layout_width="355dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:autofillHints=""
            android:background="@drawable/border_edittext"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:textSize="16sp"
            android:drawableStart="@mipmap/usuario"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.524"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.336"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/passwordI"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:autofillHints=""
            android:background="@drawable/border_edittext"
            android:ems="10"
            android:hint="@string/passwordI"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:textSize="16sp"
            android:drawableStart="@mipmap/password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.524"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.44"
            app:passwordToggleEnabled="true"
            tools:ignore="RtlSymmetry" />

        <CheckBox
            android:id="@+id/showPassword"
            android:layout_width="241dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/passwordCheckBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.123"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordI"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/loginB"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/loginL"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.646"
            tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />

        <TextView
            android:id="@+id/registroL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/registerL"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.707" />

    </LinearLayout>

</ScrollView>
